# medical-long-context-reasoning

./: .env.example  .gitignore  README.md  pyproject.toml
configs/experiments/: README.md  smoke.yaml
configs/models/: README.md  claude-opus-4-8-gcp.yaml  claude-sonnet-4-6-gcp.yaml  gemini-2.5-flash-lite.yaml  gemini-2.5-flash.yaml  gemini-3-flash-preview.yaml  gemini-3.1-flash-lite-preview.yaml  gemini-3.1-pro-preview.yaml  gemini-3.5-flash-preview.yaml  gpt-5.4-mini.yaml  gpt-5.4.yaml  gpt-5.5.yaml
mock_data_generation/: README.md  ai_form_filler.py
src/mlcr/: __main__.py  cases.py  cli.py  config.py  download.py  filler.py  logging_setup.py  matrix.py  runner.py  scoring.py  thinking.py
src/mlcr/providers/: anthropic_gcp_provider.py  azure_openai_provider.py  base.py  google_provider.py  registry.py
